# gallica-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
searches/: AGENTS.md
src/gallica_mcp/: __init__.py  client.py  install.py  query_parser.py  server.py
